<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfile"
    android:orientation="vertical"

      >

    <ImageView
        android:layout_gravity="center"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fffff"/>
    <TextView
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:padding="20dp"
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <View

        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:background="@android:color/black"/>
    <TextView
        android:textStyle="bold"
        android:padding="20dp"
        android:text="@string/track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textStyle="bold"
        android:padding="20dp"
        android:text="@string/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textStyle="bold"
        android:padding="20dp"
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textStyle="bold"
        android:padding="20dp"
        android:text="@string/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textStyle="bold"
        android:padding="20dp"
        android:text="@string/slack_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>
</android.support.v4.widget.NestedScrollView>